feat(messages): add generic showMessage function + add event to GameScene

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="assets/languages/fr.js"></script>
     <script src="src/i18n/index.js"></script>
 
+    <!-- Chargement des utilitaires -->
+    <script src="src/utils/messages.js"></script>
+
     <!-- Chargement des simulations -->
     <script src="src/simulations/PlatformSimulation.js"></script>
     <script src="src/simulations/RacingSimulation.js"></script>
