feat(feedback): scene is now ready

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Chargement des utilitaires -->
     <script src="src/utils/messages.js"></script>
+    <script src="src/utils/AnimationManager.js"></script>
 
     <!-- Chargement des simulations -->
     <script src="src/simulations/PlatformSimulation.js"></script>
