--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/i18n/index.js"></script>
 
     <!-- Chargement des utilitaires -->
+    <script src="src/utils/buttons.js"></script>
     <script src="src/utils/messages.js"></script>
     <script src="src/utils/AnimationManager.js"></script>
 
