feat(match3): start match3 type game

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <!-- Chargement des simulations -->
     <script src="src/simulations/PlatformSimulation.js"></script>
-    <script src="src/simulations/RacingSimulation.js"></script>
+    <script src="src/simulations/Match3Simulation.js"></script>
     <script src="src/simulations/BossSimulation.js"></script>
 
     <!-- Chargement des niveaux -->
     <script src="src/levels/Level.js"></script>
     <script src="src/levels/platforms.js"></script>
-    <script src="src/levels/racing.js"></script>
     <script src="src/levels/boss.js"></script>
+    <script src="src/levels/match3.js"></script>
 
     <!-- Chargement des scènes -->
     <script src="src/scenes/BootScene.js"></script>
