feat(musics): add background musics for each level

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="src/utils/buttons.js"></script>
     <script src="src/utils/messages.js"></script>
     <script src="src/utils/AnimationManager.js"></script>
+    <script src="src/utils/MusicManager.js"></script>
 
     <!-- Chargement des simulations -->
     <script src="src/simulations/PlatformSimulation.js"></script>
