feat(ui): add some sprites for UI elements

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="KorHosik" />
+    <meta
+      name="description"
+      content="This game is unbalanced! - Un jeu où vous devez équilibrer les mécaniques pour satisfaire le joueur virtuel"
+    />
     <title>This game is unbalanced!</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="assets/favicon.png" sizes="32x32" />
